--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -34,14 +34,15 @@ scrape_configs:
       script: [speedtest]
     static_configs:
       - targets:
-        - 127.0.0.1:9469
-    scrape_interval: 15m
+        - ['localhost:9469']
+    scrape_interval: 5m
     scrape_timeout: 90s
+  
   - job_name: 'script_exporter'
     metrics_path: /metrics
     static_configs:
       - targets:
-        - 127.0.0.1:9469
+        - ['localhost:9469']
 
   - job_name: 'ping'
     metrics_path: /probe
