--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.1"
 
-#volumes:
-    #prometheus_data: {}
-    #grafana_data: {}
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
 
 networks:
   front-tier:
@@ -10,11 +10,11 @@ networks:
 
 services:
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.25.2
     restart: unless-stopped
     volumes:
       - ./prometheus/:/etc/prometheus/
-      - ./prometheus_data:/prometheus
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -33,7 +33,7 @@ services:
     image: grafana/grafana
     restart: unless-stopped
     volumes:
-      - ./grafana_data:/var/lib/grafana
+      - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
     depends_on:
       - prometheus
@@ -90,4 +90,3 @@ services:
       - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
     networks:
       - back-tier
-
